objects/HS_Placement__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_wave__c</fullName>
        <formula>HS_Activity__r.Assigned_wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>HS_Activity__r.Contact_Record_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Placement_Withdrawn__c</fullName>
        <label>Date Placement Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Placement_was_chosen__c</fullName>
        <label>Date Placement was chosen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipLabel>HS Placements</relationshipLabel>
        <relationshipName>HS_Placements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Application_Status_HSA__c</fullName>
        <formula>text(HS_Activity__r.HS_Application_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Application Status (HSA)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Signposting_Opportunity__r.Organisation__r.Name</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Choice__c</fullName>
        <label>Placement Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Choice</fullName>
                </value>
                <value>
                    <fullName>Second Choice</fullName>
                </value>
                <value>
                    <fullName>Third Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_Confirmed_Chosen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placement Confirmed/Chosen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement_Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placement Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signposting_Borough__c</fullName>
        <formula>text(Signposting_Opportunity__r.Borough_of_Signposting_Opp__c)</formula>
        <label>Signposting Borough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signposting_Opp_Places_Left__c</fullName>
        <formula>Signposting_Opportunity__r.Volunteering_Places_Left__c</formula>
        <label>Signposting Opp. Places Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity__c</fullName>
        <label>Signposting Opportunity</label>
        <referenceTo>Volunteering_Opportunity__c</referenceTo>
        <relationshipLabel>HS Placements</relationshipLabel>
        <relationshipName>HS_Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Needed__c</fullName>
        <formula>HS_Activity__r.Support_Needed__c</formula>
        <label>Support Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <label>Withdrawal Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Already_Placed__c</fullName>
        <formula>IF(HS_Activity__r.Confirmed_Placement__c=1,TRUE,FALSE)</formula>
        <label>YP Already Placed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YP_District__c</fullName>
        <formula>HS_Activity__r.District__c</formula>
        <label>YP District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Young_Person_Name__c</fullName>
        <formula>HS_Activity__r.Young_Person__r.FirstName &amp; &quot; &quot; &amp;  HS_Activity__r.Young_Person__r.LastName</formula>
        <label>Young Person Name</label>
        <type>Text</type>
    </fields>
    <label>HS Placement</label>
    <listViews>
        <fullName>Alice_Unplaced_YP</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
            <value>Southwark,Croydon</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>notContain</operation>
            <value>fovo</value>
        </filters>
        <label>Alice Unplaced YP</label>
    </listViews>
    <listViews>
        <fullName>All_Placements_No_Confirmation_FOVO</fullName>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Date_Placement_Withdrawn__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Placement_Withdrawn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>contains</operation>
            <value>fovo</value>
        </filters>
        <label>All Placements No Confirmation FOVO</label>
    </listViews>
    <listViews>
        <fullName>All_Placements_No_Confirmation_FOVO_0308</fullName>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Date_Placement_Withdrawn__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Placement_Withdrawn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>contains</operation>
            <value>fovo</value>
        </filters>
        <filters>
            <field>Placement_Withdrawn__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Placements No Confirmation FOVO_0308</label>
    </listViews>
    <listViews>
        <fullName>All_YPs_Not_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Date_Placement_Withdrawn__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Placement_Withdrawn__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <columns>YP_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All YPs Not Confirmed</label>
    </listViews>
    <listViews>
        <fullName>Autumn_FOVO_matching_Ldn_2015</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <columns>HS_Application_Status_HSA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Placement_Choice__c</field>
            <operation>equals</operation>
            <value>First Choice</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>equals</operation>
            <value>Default HS FOVO Opp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>HS_Application_Status_HSA__c</field>
            <operation>contains</operation>
            <value>application submitted</value>
        </filters>
        <label>Autumn FOVO matching Ldn 2015</label>
    </listViews>
    <listViews>
        <fullName>Autumn_FOVO_matching_Ldn_20151</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <columns>HS_Application_Status_HSA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Placement_Choice__c</field>
            <operation>equals</operation>
            <value>First Choice</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>equals</operation>
            <value>Default HS FOVO Opp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>HS_Application_Status_HSA__c</field>
            <operation>contains</operation>
            <value>application submitted</value>
        </filters>
        <label>Autumn FOVO matching Ldn 2015- Elly RC</label>
    </listViews>
    <listViews>
        <fullName>Autumn_FOVO_matching_Ldn_2015_ISSUE</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <columns>HS_Application_Status_HSA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Placement_Choice__c</field>
            <operation>equals</operation>
            <value>First Choice</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>equals</operation>
            <value>Default HS FOVO Opp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>HS_Application_Status_HSA__c</field>
            <operation>notContain</operation>
            <value>submitted</value>
        </filters>
        <label>Autumn FOVO matching Ldn 2015 ISSUE</label>
    </listViews>
    <listViews>
        <fullName>Autumn_FOVO_matching_no_district_2015</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>equals</operation>
            <value>Default HS FOVO Opp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
        </filters>
        <label>Autumn FOVO matching no district 2015</label>
    </listViews>
    <listViews>
        <fullName>Autumn_Non_FOVO_matching_Ldn_2015</fullName>
        <columns>HS_Activity__c</columns>
        <columns>NAME</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>HS_Application_Status_HSA__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>notEqual</operation>
            <value>Default HS FOVO Opp</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>HS_Application_Status_HSA__c</field>
            <operation>contains</operation>
            <value>application submitted</value>
        </filters>
        <label>Autumn Non FOVO matching Ldn 2015</label>
    </listViews>
    <listViews>
        <fullName>B_ham_Unplaced_YP</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
            <value>birmingham</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>notContain</operation>
            <value>fovo</value>
        </filters>
        <label>B&apos;ham Unplaced YP</label>
    </listViews>
    <listViews>
        <fullName>Becky_Unplaced_YP</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
            <value>Kingston,Lambeth,Merton,Sutton,Lewisham</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>notContain</operation>
            <value>fovo</value>
        </filters>
        <label>Becky Unplaced YP</label>
    </listViews>
    <listViews>
        <fullName>Becky_s_recently_confirmed_FOVOs</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>YP_District__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
            <value>Kingston,Lambeth,Merton,Sutton,Lewisham</value>
        </filters>
        <filters>
            <field>Date_Placement_was_chosen__c</field>
            <operation>equals</operation>
            <value>8/20/2015</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>contains</operation>
            <value>fovo</value>
        </filters>
        <label>Becky&apos;s recently confirmed FOVOs</label>
    </listViews>
    <listViews>
        <fullName>Bevan_Unmatched_YPs_Autumn_2015</fullName>
        <columns>NAME</columns>
        <columns>HS_Activity__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YP_District__c</field>
            <operation>equals</operation>
            <value>Tower Hamlets,Hackney,Islington,Waltham Forest</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opportunity__c</field>
            <operation>notContain</operation>
            <value>fovo</value>
        </filters>
        <filters>
            <field>Date_Placement_was_chosen__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2015</value>
        </filters>
        <label>*Bevan Unmatched YPs Autumn 2015</label>
    </listViews>
    <listViews>
        <fullName>Bevan_volunteer_match_1st_choice_2015</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>HS_Activity__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>NAME</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Placement_Choice__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Borough__c</field>
            <operation>equals</operation>
            <value>Tower Hamlets,Hackney,Islington,Waltham Forest</value>
        </filters>
        <filters>
            <field>Placement_Choice__c</field>
            <operation>equals</operation>
            <value>First Choice</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opp_Places_Left__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Placement_was_chosen__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2015</value>
        </filters>
        <filters>
            <field>Placement_Withdrawn__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Bevan volunteer match 1st choice 2015</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Co_ordinator_Temp</role>
            <role>HeadStart_Manager</role>
            <role>HeadStart_Telephone_Mentor</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Mentor</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bevan_volunteer_match_2nd_choice_2015</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>HS_Activity__c</columns>
        <columns>Support_Needed__c</columns>
        <columns>Placement_Confirmed_Chosen__c</columns>
        <columns>Signposting_Opp_Places_Left__c</columns>
        <columns>Signposting_Opportunity__c</columns>
        <columns>YP_District__c</columns>
        <columns>Signposting_Borough__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Young_Person_Name__c</columns>
        <columns>Date_Placement_was_chosen__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Assigned_wave__c</columns>
        <columns>NAME</columns>
        <columns>Placement_Choice__c</columns>
        <columns>YP_Already_Placed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Placement_Confirmed_Chosen__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Borough__c</field>
            <operation>equals</operation>
            <value>Tower Hamlets,Hackney,Islington,Waltham Forest</value>
        </filters>
        <filters>
            <field>Placement_Choice__c</field>
            <operation>equals</operation>
            <value>Second Choice</value>
        </filters>
        <filters>
            <field>YP_Already_Placed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Signposting_Opp_Places_Left__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Placement_was_chosen__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2015</value>
        </filters>
        <label>Bevan volunteer match 2nd choice 2015</label>
        <sharedTo>
            <role>HeadStart_Assistant_Manager</role>
            <role>HeadStart_Co_ordinator</role>
            <role>HeadStart_Co_ordinator_Temp</role>
            <role>HeadStart_Manager</role>
            <role>HeadStart_Telephone_Mentor</role>
            <role>Headstart_Assistant_Programme_Manager</role>
            <role>Headstart_Mentor</role>
            <role>Headstart_Senior_Assistant_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>HSP-{00000000}</displayFormat>
        <label>HS Placement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Both_Ticks_Test</fullName>
        <active>true</active>
        <errorConditionFormula>and( Placement_Confirmed_Chosen__c =TRUE,
 Placement_Withdrawn__c=TRUE,
ischanged(Placement_Confirmed_Chosen__c))</errorConditionFormula>
        <errorMessage>Placement withdrawn, untick to save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debug_Idea_v1</fullName>
        <active>true</active>
        <errorConditionFormula>and(HS_Activity__r.Confirmed_Placement__c &gt;=1,

Placement_Confirmed_Chosen__c=TRUE,
 Placement_Withdrawn__c&lt;&gt;TRUE )</errorConditionFormula>
        <errorMessage>This YP already has a confirmed placement!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Tick_Test</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ispickval(Signposting_Opportunity__r.Availability__c,&quot;Full&quot;),

Placement_Confirmed_Chosen__c=TRUE,
 Placement_Withdrawn__c&lt;&gt;TRUE)</errorConditionFormula>
        <errorMessage>Not happening.. Volunteering Opportunity is full!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Tick_Test2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ispickval(Signposting_Opportunity__r.Availability__c,&quot;Too many confirmed&quot;), 

Placement_Confirmed_Chosen__c=TRUE)</errorConditionFormula>
        <errorMessage>Not happening.. Volunteering Opportunity has too many confirmed places!!</errorMessage>
    </validationRules>
</CustomObject>